--- a/src/components/custom-components/award-component/AwardList.module.css
+++ b/src/components/custom-components/award-component/AwardList.module.css
@@ -12,3 +12,22 @@
   border: 1px solid #e86c44 !important;
   padding: 10px 25px;
 }
+
+.imgStyle {
+  border-radius: 10px;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.imgStyle:hover {
+  transform: scale(1.1);
+}
+
+.imgWrapper {
+  position: relative;
+  width: 100%;
+  height: 130px;
+  overflow: hidden;
+  border-radius: 10px;
+}
